--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,38 @@
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-<% end %>
+<div class="container">
+    <% if @article.errors.any? %>
+        <h2>The following errors prevented the article from being saved</h2>
+        <ul>
+            <% @article.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+        </ul>
+    <% end %>
 
-<%= form_with(model: @article, local: true) do |f| %>
+    <div class="row justify-content-center">
+        <div class="col-10">
+            <%= form_with(model: @article, local: true) do |f| %>
+            <div class"form-group row mx-auto">
+                <%= f.label :title, class: "col-form-label" %>
+                <div class="">
+                    <%= f.text_field :title, class: "form-control" %>
+                </div>
+            </div>
 
-<p>
-    <%= f.label :title%><br>
-    <%= f.text_field :title%>
-</p>
 
-<p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-</p>
 
-<p>
-    <%= f.submit %><br>
-</p>
+            <div class"form-group row">
+                <%= f.label :description, class: "col-form-label"%>
+                <div class="">
+                <%= f.text_area :description,  rows: 10, class: "form-control" %>
+                </div>
+            </div>
 
-<% end %>
+            <div class="form-group row justify-content-center mt-4">
+                <%= f.submit class: "btn btn-outline-light btn-lg" %>
+            </div>
+
+            <% end %>
+        </div>
+        <%= link_to "[Cancel and Return to aticles listing]", articles_path%>
+    </div>
+</div>
