--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Edit an article </h1>
+<div id="page-content">
+    <h1 class="text-center mt-4">Edit an articles</h1>
 
-<%= render 'form' %>
 
-<%= link_to "Cancel and Return to aticles listing", articles_path%>
+    <%= render 'form' %>
+
+   
+
+</div>
