--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Create a new article </h1>
+<div id="page-content">
+    <h1 class="text-center mt-4">Create new articles</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to "Return to aticles listing", articles_path%>
+
+</div>
