--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,13 +1,13 @@
-<div class="container">
-<% flash.each do |name, msg| %>
-  
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-<%= msg %>
-<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-</button>
+<div  style="width: 100%; background-color: lightgrey;"> 
+    <div class="container">
+    <% flash.each do |name, msg| %>
+    
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <%= msg %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <% end %>
+    </div>
 </div>
-<% end %>
-</div>
-
-  
