Cleaned up layot

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,6 +25,8 @@
 
             <% end %>
         </div>
-        <%= link_to "[Cancel and Return to aticles listing]", articles_path%>
+        <div class="mb-3">
+            <%= link_to "[Cancel and Return to aticles listing]", articles_path%>
+        </div>
     </div>
 </div>
