--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-10">
-        <%= render 'shared/errors' %>
+        <%= render 'shared/errors', obj: @article %>
             <%= form_with(model: @article, local: true) do |f| %>
             <div class"form-group row mx-auto">
                 <%= f.label :title, class: "col-form-label" %>
@@ -20,7 +20,7 @@
             </div>
 
             <div class="form-group row justify-content-center mt-4">
-                <%= f.submit class: "btn btn-outline-light btn-lg" %>
+                <%= f.submit class: "btn btn-outline-info btn-lg" %>
             </div>
 
             <% end %>
