--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,7 +27,7 @@
             </div>
 
             <div class="form-group row justify-content-center mt-4">
-                <%= f.submit "Sign Up", class: "btn btn-outline-info btn-lg" %>
+                <%= f.submit(@user.new_record? ? "Sign Up" : "Update Account", class: "btn btn-outline-info btn-lg" )%>
             </div>
 
             <% end %>
