--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,7 +6,7 @@
             <div class"form-group row mx-auto">
                 <%= f.label :title, class: "col-form-label" %>
                 <div class="">
-                    <%= f.text_field :title, class: "form-control" %>
+                    <%= f.text_field :title, class: "form-control shadow rounded" %>
                 </div>
             </div>
 
@@ -15,9 +15,20 @@
             <div class"form-group row">
                 <%= f.label :description, class: "col-form-label"%>
                 <div class="">
-                <%= f.text_area :description,  rows: 10, class: "form-control" %>
+                <%= f.text_area :description,  rows: 10, class: "form-control shadow rounded" %>
                 </div>
             </div>
+
+
+            <div class"form-group row">
+              <%= f.label :category, class: "col-form-label"%>
+              <div class="">
+                <%= f.collection_select :category_ids, Category.all, :id, :name,
+                                        {prompt:  "Make your selection from the list below (can be empty)"},
+                                        {:multiple => true, size: 4,  class: "custom-select shadow rounded"}  %>
+              </div>
+            </div>
+
 
             <div class="form-group row justify-content-center mt-4">
                 <%= f.submit class: "btn btn-outline-info btn-lg" %>
