--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,21 @@
 <h1 class="text-center mt-4"><%= @category.name %></h1>
+
+<div class="text-center mt-4">
+  <% if logged_in? && current_user.admin %>
+    <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-outline-info" %>
+  <% end %>
+</div>
+
+<h3 class="text-center mt-4">Articles</h3>
+
+<div class="row justify-content-md-center mb-2">
+  <%= will_paginate @articles, :previous_label => '← Previous',
+                    :next_label => 'Next →'  %>
+</div>
+
+<%= render 'articles/article'%>
+
+<div class="row justify-content-md-center mb-2">
+  <%= will_paginate @articles, :previous_label => '← Previous',
+                    :next_label => 'Next →'  %>
+</div>
